language/move-lang/tests/move_check/typing/pack_unit.exp
error: 

   ┌── tests/move_check/typing/pack_unit.move:2:16 ───
   │
 5 │         Box { f: () };
   │         ^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
   ·
 2 │     struct Box<T> { f: T }
   │                - 0000000000000000000000000000000000000000000000000000000008675309.M.Box<_> is found to be a non-copyable type here
   │

error: 

   ┌── tests/move_check/typing/pack_unit.move:5:9 ───
   │
 5 │         Box { f: () };
   │         ^^^^^^^^^^^^^ Could not infer this type. Try adding an annotation
   │

error: 

   ┌── tests/move_check/typing/pack_unit.move:5:9 ───
   │
 5 │         Box { f: () };
   │                  ^^ Invalid argument for field 'f' for '0000000000000000000000000000000000000000000000000000000008675309.M.Box'
   ·
 5 │         Box { f: () };
   │                  -- The type: '()'
   ·
 5 │         Box { f: () };
   │         ------------- Is not compatible with: '_'
   │

